[tool.poetry]
name = "hackernews"
version = "0.1.0"
description = ""
authors = ["yaaa3ser <yasserissa1411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
graphene-django = "^3.0.0"
django-filter = "^22.1"
django-graphql-jwt = "^0.3.4"
django-extensions = "^3.2.1"
ipython = "^8.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
